--- a/README.adoc
+++ b/README.adoc
@@ -1,1 +1,1 @@
-*EasyLog* is a simple log service, mainly used in Kubernetes environment. 
+#EasyLog# is a simple log service, mainly used in Kubernetes environment. 
