--- a/README.adoc
+++ b/README.adoc
@@ -35,7 +35,7 @@ complex parametrization and simple installation
   https://nodeurl:30880
 
 
-== Features of alpha version
+== Features of alpha version 0.0.9
 
 * Tracking logs of each node
 * Copy logs to a rotating internal log, configurable size
