--- a/README.adoc
+++ b/README.adoc
@@ -6,9 +6,9 @@ ifdef::env-github[]
 :warning-caption: :warning:
 endif::[]
 
-= EasyLog
+= Easy Kube Log
 
-Easy log view for Kubernetes
+Log viewer for Kubernetes - simple to install and use
 
 [WARNING]
 [RED]*!! Pre-Alpha version so don't use in production !!*
@@ -16,6 +16,7 @@ Easy log view for Kubernetes
 The main idea about another log service was to have something small, which does it's job without
 complex parametrization and simple installation
 
+image:./EasyKubeLogScreenshot.png[]
 
 
 [#Quickstart]
@@ -30,7 +31,7 @@ complex parametrization and simple installation
 
   kubectl apply -f DaemonSetEasyLogService.yaml
 
-*Connect to EasyLog*
+*Connect to Easy Kube Log*
 
   https://nodeurl:30880
 
